修复参数保存后不生效